--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ body {
     margin-top: 7px;
     width: 30px;
     height: 0;
-    border: 2px solid #F07C00;
+    border-top: 3px solid #F07C00;
     margin-right: 10px;
 }
 
