--- a/css/style.css
+++ b/css/style.css
@@ -1584,7 +1584,7 @@
     }
     
     .map_point {
-        margin-bottom: 9.2%;
+        margin-bottom: 12.6%;
         margin-left: 17px;
     }
     
@@ -1607,6 +1607,11 @@
         margin-top: 20px;
         display: flex;
         align-items: center;
+    }
+    
+    .form__btn p {
+        position: absolute;
+        left: 28%;
     }
     
     .form__btn p span {
@@ -1641,8 +1646,8 @@
     }
     
     .delivery__img {
-        width: 100%;
-        right: 20px;
+        width: 65%;
+        right: -215px;
         margin-top: 60px;
         z-index: -1;
     }
@@ -1994,13 +1999,6 @@
     .left {
         left: 0;
         margin-top: 63px;
-    }
-    
-    .prev,
-    .next {
-        position: absolute;
-        z-index: 0;
-        color: transparent;
     }
     /*main end*/
     /*footer start*/
